# wordle

./: Makefile  README.md  pyproject.toml
wordle/: __main__.py  exception.py  game.py  getch.py  words.py
